src/test/compile-fail/block-must-not-have-result-for.rs
// error-pattern:this block must not have a result

fn main() {
    for i in [0] {
        true
    }
}